--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
 <title>Welcome to NRES 470/670</title>
 
-<script src="site_libs/header-attrs-2.11/header-attrs.js"></script>
-<script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
+<script src="site_libs/header-attrs-2.10/header-attrs.js"></script>
+<script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/spacelab.min.css" rel="stylesheet" />
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
@@ -381,18 +381,18 @@ div.tocify {
 </div>
 
 
-<p><strong>Instructor:</strong> Kevin Shoemaker <strong>Office:</strong> Fleischmann Agriculture, room 220e<br />
+<p><strong>Instructor:</strong> Kevin Shoemaker<br />
+<strong>Office:</strong> Fleischmann Agriculture, room 220e<br />
 <strong>Phone:</strong> 775-682-7449<br />
-<strong>Email</strong>: kevinshoemaker_at_unr_dot_edu <strong>Office hours</strong>: Wed 3pm in FA 220e <strong>Course Website</strong>: <a href="https://kevintshoemaker.github.io/NRES-470/">https://kevintshoemaker.github.io/NRES-470/</a></p>
+<strong>Email</strong>: kevinshoemaker_at_unr_dot_edu<br />
+<strong>Office hours</strong>: Wed 3pm in FA 220e<br />
+<strong>Course Website</strong>: <a href="https://kevintshoemaker.github.io/NRES-470/">https://kevintshoemaker.github.io/NRES-470/</a></p>
 <p><strong>Teaching Assistant</strong> Margarete Walden (mwalden_at_nevada_dot_unr_dot_edu)<br />
 <strong>TA Office hours</strong>: TBD (check website for updates)</p>
 <div id="course-meeting-times" class="section level3">
 <h3>Course Meeting Times</h3>
 <p><strong>Lecture &amp; Discussion</strong>: M, W at 10am (50 mins) in AB 213<br />
 <strong>Lab</strong>: F at 1pm (2 hrs 45 mins) in FA 301</p>
-<ul>
-<li>Walden: TBD</li>
-</ul>
 </div>
 <div id="course-description" class="section level3">
 <h3>Course description</h3>
