--- a/LECTURE2.html
+++ b/LECTURE2.html
@@ -14,20 +14,28 @@
 
 <title>Intro to population ecology</title>
 
+<script src="site_libs/header-attrs-2.10/header-attrs.js"></script>
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/spacelab.min.css" rel="stylesheet" />
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/html5shiv.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/respond.min.js"></script>
+<style>h1 {font-size: 34px;}
+       h1.title {font-size: 38px;}
+       h2 {font-size: 30px;}
+       h3 {font-size: 24px;}
+       h4 {font-size: 18px;}
+       h5 {font-size: 16px;}
+       h6 {font-size: 12px;}
+       code {color: inherit; background-color: rgba(0, 0, 0, 0.04);}
+       pre:not([class]) { background-color: white }</style>
 <script src="site_libs/jqueryui-1.11.4/jquery-ui.min.js"></script>
 <link href="site_libs/tocify-1.9.1/jquery.tocify.css" rel="stylesheet" />
 <script src="site_libs/tocify-1.9.1/jquery.tocify.js"></script>
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
 <link href="site_libs/highlightjs-9.12.0/default.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
-<link href="site_libs/anchor-sections-1.0/anchor-sections.css" rel="stylesheet" />
-<script src="site_libs/anchor-sections-1.0/anchor-sections.js"></script>
 
 <style type="text/css">
   code{white-space: pre-wrap;}
@@ -39,11 +47,6 @@
     </style>
 
 <style type="text/css">code{white-space: pre;}</style>
-<style type="text/css">
-  pre:not([class]) {
-    background-color: white;
-  }
-</style>
 <script type="text/javascript">
 if (window.hljs) {
   hljs.configure({languages: []});
@@ -56,32 +59,7 @@ if (window.hljs) {
 
 
 
-<style type="text/css">
-h1 {
-  font-size: 34px;
-}
-h1.title {
-  font-size: 38px;
-}
-h2 {
-  font-size: 30px;
-}
-h3 {
-  font-size: 24px;
-}
-h4 {
-  font-size: 18px;
-}
-h5 {
-  font-size: 16px;
-}
-h6 {
-  font-size: 12px;
-}
-.table th:not([align]) {
-  text-align: left;
-}
-</style>
+
 
 
 
@@ -91,10 +69,6 @@ h6 {
   max-width: 940px;
   margin-left: auto;
   margin-right: auto;
-}
-code {
-  color: inherit;
-  background-color: rgba(0, 0, 0, 0.04);
 }
 img {
   max-width:100%;
@@ -111,40 +85,13 @@ button.code-folding-btn:focus {
 summary {
   display: list-item;
 }
+pre code {
+  padding: 0;
+}
 </style>
 
 
 <style type="text/css">
-/* padding for bootstrap navbar */
-body {
-  padding-top: 52px;
-  padding-bottom: 40px;
-}
-/* offset scroll position for anchor links (for fixed navbar)  */
-.section h1 {
-  padding-top: 57px;
-  margin-top: -57px;
-}
-.section h2 {
-  padding-top: 57px;
-  margin-top: -57px;
-}
-.section h3 {
-  padding-top: 57px;
-  margin-top: -57px;
-}
-.section h4 {
-  padding-top: 57px;
-  margin-top: -57px;
-}
-.section h5 {
-  padding-top: 57px;
-  margin-top: -57px;
-}
-.section h6 {
-  padding-top: 57px;
-  margin-top: -57px;
-}
 .dropdown-submenu {
   position: relative;
 }
@@ -172,7 +119,7 @@ body {
   margin-right: -10px;
 }
 .dropdown-submenu:hover>a:after {
-  border-left-color: #ffffff;
+  border-left-color: #adb5bd;
 }
 .dropdown-submenu.pull-left {
   float: none;
@@ -184,7 +131,7 @@ body {
 }
 </style>
 
-<script>
+<script type="text/javascript">
 // manage active state of menu based on current page
 $(document).ready(function () {
   // active menu anchor
@@ -195,10 +142,23 @@ $(document).ready(function () {
   var menuAnchor = $('a[href="' + href + '"]');
 
   // mark it active
-  menuAnchor.parent().addClass('active');
+  menuAnchor.tab('show');
 
   // if it's got a parent navbar menu mark it active as well
   menuAnchor.closest('li.dropdown').addClass('active');
+
+  // Navbar adjustments
+  var navHeight = $(".navbar").first().height() + 15;
+  var style = document.createElement('style');
+  var pt = "padding-top: " + navHeight + "px; ";
+  var mt = "margin-top: -" + navHeight + "px; ";
+  var css = "";
+  // offset scroll position for anchor links (for fixed navbar)
+  for (var i = 1; i <= 6; i++) {
+    css += ".section h" + i + "{ " + pt + mt + "}\n";
+  }
+  style.innerHTML = "body {" + pt + "padding-bottom: 40px; }\n" + css;
+  document.head.appendChild(style);
 });
 </script>
 
@@ -210,7 +170,6 @@ $(document).ready(function () {
   max-height: 500px;
   min-height: 44px;
   overflow-y: auto;
-  background: white;
   border: 1px solid #ddd;
   border-radius: 4px;
 }
@@ -336,7 +295,7 @@ div.tocify {
 
 
 <!-- setup 3col/9col grid for toc_float and main content  -->
-<div class="row-fluid">
+<div class="row">
 <div class="col-xs-12 col-sm-4 col-md-3">
 <div id="TOC" class="tocify">
 </div>
@@ -384,60 +343,6 @@ div.tocify {
     <li>
       <a href="LECTURE3.html">Thomas Robert Malthus</a>
     </li>
-    <li>
-      <a href="LECTURE4.html">Population Regulation</a>
-    </li>
-    <li>
-      <a href="LECTURE5.html">Passenger Pigeon</a>
-    </li>
-    <li>
-      <a href="LECTURE6.html">Age-structured populations</a>
-    </li>
-    <li>
-      <a href="LECTURE7.html">Matrix population models</a>
-    </li>
-    <li>
-      <a href="LECTURE8.html">Stochastic population models</a>
-    </li>
-    <li>
-      <a href="LECTURE9.html">Small population paradigm</a>
-    </li>
-    <li>
-      <a href="LECTURE10.html">Individual-based models</a>
-    </li>
-    <li>
-      <a href="LECTURE11.html">Declining population paradigm</a>
-    </li>
-    <li>
-      <a href="LECTURE12.html">Population Viability Analysis</a>
-    </li>
-    <li>
-      <a href="LECTURE13.html">Metapopulations</a>
-    </li>
-    <li>
-      <a href="LECTURE14.html">PVA example: pdogs and ferrets</a>
-    </li>
-    <li>
-      <a href="LECTURE15.html">Parameter estimation</a>
-    </li>
-    <li>
-      <a href="LECTURE16.html">Species interactions: competition</a>
-    </li>
-    <li>
-      <a href="LECTURE17.html">Species interactions: prey-predator</a>
-    </li>
-    <li>
-      <a href="LECTURE18.html">Wrap-up</a>
-    </li>
-    <li>
-      <a href="PVA1_421.html">NRES421: PVA basics</a>
-    </li>
-    <li>
-      <a href="PVA2_421.html">NRES421: grizzly PVA</a>
-    </li>
-    <li>
-      <a href="PVA3_421.html">NRES421: loggerhead PVA</a>
-    </li>
   </ul>
 </li>
 <li class="dropdown">
@@ -451,28 +356,7 @@ div.tocify {
       <a href="LAB1.html">Lab 1: exponential growth</a>
     </li>
     <li>
-      <a href="LAB2.html">Lab 2: logistic growth</a>
-    </li>
-    <li>
-      <a href="LAB3.html">Lab 3: age-structured population growth</a>
-    </li>
-    <li>
-      <a href="LAB4.html">Lab 4: matrix population models</a>
-    </li>
-    <li>
-      <a href="LAB5.html">Lab 5: stochasticity and uncertainty</a>
-    </li>
-    <li>
-      <a href="LAB6.html">Lab 6: metapopulations</a>
-    </li>
-    <li>
-      <a href="LAB7.html">Lab 7: capture-mark-recapture</a>
-    </li>
-    <li>
       <a href="FINAL_PROJECTS.html">Final Projects!</a>
-    </li>
-    <li>
-      <a href="EXTRA_CREDIT.html">Extra Credit!</a>
     </li>
   </ul>
 </li>
@@ -487,13 +371,13 @@ div.tocify {
   </div><!--/.container -->
 </div><!--/.navbar -->
 
-<div class="fluid-row" id="header">
+<div id="header">
 
 
 
 <h1 class="title toc-ignore">Intro to population ecology</h1>
 <h4 class="author">NRES 470/670</h4>
-<h4 class="date">Spring 2021</h4>
+<h4 class="date">Spring 2022</h4>
 
 </div>
 
@@ -528,7 +412,7 @@ div.tocify {
 <li>How do anthropogenic structures and land uses affect populations?</li>
 <li>What is the <em>Maximum Sustainable Yield</em> for a focal game species?</li>
 <li>How can pest species be effectively controlled?</li>
-<li>What specific land areas should be pretected to preserve at-risk populations and metapopulations?</li>
+<li>What specific land areas should be protected to preserve at-risk populations and metapopulations?</li>
 <li>What are the likely population-level effects of alternative conservation or management strategies?</li>
 </ul>
 </div>
@@ -567,23 +451,21 @@ div.tocify {
 <p><img src="Juniperus_range_map.png" /></p>
 <ul>
 <li><p>What are the ecological mechanisms that govern species’ <strong>range margins</strong>? (figure is for common juniper)</p></li>
-<li><p>How can we upscale detailed processes at the level of individuals (e.g., behavioral interactions) into patterns at the population scale? (emergent properties!)</p></li>
+<li><p>How do patterns at the population scale (e.g., density-dependence) relate to processes at the level of individuals (e.g., behavioral interactions)? (emergent properties!)</p></li>
 </ul>
 <p><img src="Wolves_and_bones.jpg" /></p>
 <ul>
-<li>What is the relative importance of direct (<strong>predation, competition</strong>) vs. indirect (induced behavioural change; e.g., fear) interactions in determining the effect of one species on others?</li>
+<li>What is the relative importance of direct (<strong>predation, contest competition</strong>) vs. indirect (induced behavioral change; e.g., fear) interactions in determining the effects of one species on others?</li>
 </ul>
 <p><img src="Gopherus_agassizii.jpg" /></p>
 <ul>
 <li><p>What demographic traits determine the <strong>resilience</strong> of natural populations to disturbance and perturbation (e.g., climate change)?</p></li>
-<li><p>To what extent will climate change decouple trophic links due to <strong>phenological mismatches</strong>?<br />
+<li><p>To what extent will climate change de-couple trophic links due to <strong>phenological mismatches</strong>?<br />
 </p></li>
 <li><p>How do natural populations and communities respond to increased frequencies of <strong>extreme weather events</strong> predicted under global climate change?<br />
 </p></li>
 <li><p>How do <strong>interspecific interactions</strong> affect species responses to global change?</p></li>
-<li><p>How important are <strong>rare species</strong> in the functioning of ecological communities?<br />
-</p></li>
-<li><p>What is the magnitude of the <strong>‘extinction debt’</strong> following the loss and fragmentation of natural habitats, and when will it be paid?</p></li>
+<li><p>How important are <strong>rare species</strong> in the functioning of ecological communities?</p></li>
 </ul>
 <div id="and-many-more" class="section level4">
 <h4>And many more…</h4>
@@ -616,7 +498,7 @@ div.tocify {
 <p>You should notice that the population tends to grow slowly at first and then very rapidly. This is referred to as <em>exponential growth</em>. If you’ve read the first chapter of the Gotelli book, you will recognize this as the <em>foundational concept of population ecology</em>!</p>
 <p><strong>Q</strong> Can you model the puffball example from earlier in the lecture? How many giant puffballs are in the population after two generations?? [TopHat]</p>
 <p><strong>Q</strong> Can you (approximately) replicate the human population graph at the beginning of this lecture? What is the per-capita growth rate (<span class="math inline">\(r\)</span>) of the human population?? [TopHat] (NOTE: this is totally optional, but you could solve this analytically!)</p>
-<p>And just for fun, here is a <a href="https://www.youtube.com/watch?v=DZCm2QQZVYk">video</a> about exponential growth you might want to check out..</p>
+<p>And just for fun, here is a <a href="https://www.youtube.com/watch?v=9znsuCphHUU&amp;list=PLE431532ABEAD0082">video</a> about exponential growth you might want to check out..</p>
 <p><a href="LECTURE3.html">–go to next lecture–</a></p>
 </div>
 
@@ -649,7 +531,7 @@ $(document).ready(function () {
 
 $(document).ready(function () {
   $('.tabset-dropdown > .nav-tabs > li').click(function () {
-    $(this).parent().toggleClass('nav-tabs-open')
+    $(this).parent().toggleClass('nav-tabs-open');
   });
 });
 </script>
@@ -658,6 +540,9 @@ $(document).ready(function () {
 
 <script>
 $(document).ready(function ()  {
+
+    // temporarily add toc-ignore selector to headers for the consistency with Pandoc
+    $('.unlisted.unnumbered').addClass('toc-ignore')
 
     // move toc-ignore selectors from section div to header
     $('div.section.toc-ignore')
