--- a/LAB1.html
+++ b/LAB1.html
@@ -667,7 +667,7 @@ N                         # Now print the contents of the object &quot;N&quot;.<
 <ul>
 <li><strong><em>Short answer (3a.)</em></strong> Starting with a growing population, can you come up with two different scenarios in which <em>Population</em> is neither growing nor declining, by only changing one of the sliders from the starting conditions (ie, starting with the version you just submitted)? Explain your answer.</li>
 </ul>
-<p>##Checklist for Lab 1 completion *Please submit all files (Excel file, and R code as text file) and responses via Top Hat. The InsightMaker models should be shared by saving your Insights as “public” and sharing the URL link with your instructors in Top Hat.</p>
+<p>##Checklist for Lab 1 completion *Please submit all files (Excel file as attachment in Top Hat and R script as text pasted into Top Hat) and responses via Top Hat. The InsightMaker models should be shared by saving your Insights as “public” and sharing the URL link with your instructors in Top Hat.</p>
 <p><strong><em>Due Feb. 4</em></strong></p>
 <ul>
 <li>Top Hat short answers and file submissions
@@ -682,11 +682,11 @@ N                         # Now print the contents of the object &quot;N&quot;.<
 </ul></li>
 <li><strong>Exercise 2</strong>
 <ul>
-<li><em>Short answer (2a.)</em></li>
-<li><em>Short answer (2b.)</em></li>
+<li><em>Short answer and plot (2a.)</em></li>
+<li><em>Short answer and plot (2b.)</em></li>
 <li><em>Short answer (2c.)</em></li>
 <li><em>Short answer (2d.)</em></li>
-<li><em>Submit r script (2e.)</em> Your R code should show that you were able to:
+<li><em>Copy and paste R code (2e.)</em> Your R code should show that you were able to:
 <ol style="list-style-type: lower-alpha">
 <li>adapt the given code to run for 85 years, and can display a plot of the results;<br />
 </li>
@@ -700,7 +700,7 @@ N                         # Now print the contents of the object &quot;N&quot;.<
 <li><strong>Exercise 3</strong>
 <ul>
 <li><em>Short answer (3a.)</em></li>
-<li><em>Submit InsightMaker link</em></li>
+<li><em>Submit InsightMaker link (3b.)</em></li>
 </ul></li>
 </ul></li>
 </ul>
