--- a/LECTURE2.html
+++ b/LECTURE2.html
@@ -514,38 +514,10 @@ div.tocify {
 <p>The importance of the method is this: if we know certain variables, mostly desired by ecologists and in some cases already determined by them, we can predict certain results which would not normally be predictable or even expected by ecologists. The stage of verification of these mathematical predictions has hardly begun; but their importance cannot be under-estimated, and we look forward to seeing the further volumes of Lotka’s studies.<br />
 - Charles Elton</p>
 </div>
-<div id="population-ecology-is-central-to-many-of-the-most-pressing-questions-in-modern-ecology-and-evolution" class="section level2">
-<h2>Population ecology is central to many of the most pressing questions in modern ecology and evolution</h2>
-<p>This class is mostly about how important Population Ecology is to wildlife conservation and management. But it is worth mentioning that Population Ecology is a very active field of basic science, and that population ecology is at the core of many of the central questions of ecology and evolution.</p>
-<p>These questions are from <a href="http://onlinelibrary.wiley.com/doi/10.1111/1365-2745.12025/full">Sutherland et al. 2012</a>. This paper is on WebCampus (optional). Of course there are many more interesting questions- limited only by your imagination.</p>
-<p>You may not understand all these questions now- we will revisit this list at the end of the semester!</p>
-<p><img src="Fragmentation1.jpg" /></p>
-<ul>
-<li>What are the ecological consequences of species becoming less connected through <strong>fragmentation</strong> or more connected through globalization?</li>
-</ul>
-<p><img src="Juniperus_range_map.png" /></p>
-<ul>
-<li><p>What are the ecological mechanisms that govern species’ <strong>range margins</strong>? (figure is for common juniper)</p></li>
-<li><p>How do patterns at the population scale (e.g., density-dependence) relate to processes at the level of individuals (e.g., behavioral interactions)? (emergent properties!)</p></li>
-</ul>
-<p><img src="Wolves_and_bones.jpg" /></p>
-<ul>
-<li>What is the relative importance of direct (<strong>predation, contest competition</strong>) vs. indirect (induced behavioral change; e.g., fear) interactions in determining the effects of one species on others?</li>
-</ul>
-<p><img src="Gopherus_agassizii.jpg" /></p>
-<ul>
-<li><p>What demographic traits determine the <strong>resilience</strong> of natural populations to disturbance and perturbation (e.g., climate change)?</p></li>
-<li><p>To what extent will climate change de-couple trophic links due to <strong>phenological mismatches</strong>?<br />
-</p></li>
-<li><p>How do natural populations and communities respond to increased frequencies of <strong>extreme weather events</strong> predicted under global climate change?<br />
-</p></li>
-<li><p>How do <strong>interspecific interactions</strong> affect species responses to global change?</p></li>
-<li><p>How important are <strong>rare species</strong> in the functioning of ecological communities?</p></li>
-</ul>
-<div id="and-many-more" class="section level4">
-<h4>And many more…</h4>
+<div id="exponential-growth" class="section level2">
+<h2>Exponential growth</h2>
+<p>In lab we went over the mathematics of exponential growth. Now we will go over the concept of exponential growth, focusing on the idea of exponential growth as a <strong>positive feedback loop</strong>.</p>
 <p><img src="positivefeedback1.png" /></p>
-</div>
 </div>
 <div id="in-class-exercise-positive-feedbacks" class="section level2">
 <h2>In-class Exercise: positive feedbacks</h2>
