--- a/LECTURE4.html
+++ b/LECTURE4.html
@@ -459,14 +459,14 @@ div.tocify {
 
 <div id="what-is-density-dependence-d-d" class="section level2">
 <h2>What is density dependence (D-D)?</h2>
-<p>Last week we went through the mathematics of exponential growth. This week we will explore basic models of <strong>density dependence</strong>. Exponential growth, as you have seen, leads to craziness. It is not sustainable. As Malthus noted, resources are finite, and sooner or later exponentially growing populations will find their limits.</p>
+<p>As part of Lab 1 we went through the mathematics of exponential growth. This week we will explore basic models of <strong>density dependence</strong>. Exponential growth, as you have seen, leads to craziness. It is not sustainable. As Malthus noted, resources are finite, and sooner or later exponentially growing populations will find their limits.</p>
 <p><strong>Density</strong>: In D-D, <em>density</em> basically refers to the number of conspecific individuals that you are competing with for food and other resources. The more you compete with others of your own species, the less favorable your <strong>vital rates</strong> (e.g., per-capita death rate, <em>d</em>, increases or per-capita birth rate, <em>b</em>, decreases)! As <em>N</em> goes up, vital rates take a turn for the worse.</p>
 </div>
 <div id="regulation" class="section level2">
 <h2>Regulation!</h2>
 <p>First of all, we mentioned in our systems ecology discussion that positive feedbacks are not sustainable, because increases mean faster increases, mean faster increases, etc. (a vicious circle). Density dependence is a kind of feedback, but it is NOT a positive feedback. That’s right- it is a <em>negative feedback</em>! Which is also known as a <em>stabilizing feedback</em>. As we discussed before, negative feedbacks are essential for well-regulated systems. Recall the example of homeostasis in organismal biology. If blood sugar goes up, the body will work to lower it, and vice versa.</p>
-<p>Same with populations. In a regulated population, an increase in abundance will cause a decrease in the population growth rate, and a decrease in abundance will cause an increase in the population growth rate. In population ecology (and especially fisheries science), the latter is often called <em>compensatory growth</em>! You can’t have a regulated population without some kind of negative feedback.</p>
-<p><strong>thought Q</strong>: What are some possible mechanisms of density-dependence? That is, why could vital rates become less favorable at higher densities?</p>
+<p>Same with populations. In a regulated population, an increase in abundance will cause a decrease in the population growth rate, and a decrease in abundance will cause an increase in the population growth rate (<em>compensatory growth</em>). You can’t have a regulated population without some kind of negative feedback.</p>
+<p><strong>thought Q</strong>: What are some possible mechanisms for density-dependence? That is, why could vital rates become less favorable at higher densities?</p>
 <p><strong>thought Q</strong>: Are all wild populations regulated? Is density-dependent population regulation a “law of nature”?</p>
 </div>
 <div id="logistic-growth" class="section level2">
@@ -474,7 +474,7 @@ div.tocify {
 <p>Logistic growth can be described mathematically by the following equation:</p>
 <p><span class="math inline">\(\Delta N = r \cdot N_t \cdot \left ( 1 - \frac{N}{K} \right )\)</span></p>
 <p>This is probably the <em>second most important equation of population ecology</em> (after basic exponential growth!).</p>
-<p>We will go into more detail in lab, but Let’s break this equation down a bit.</p>
+<p>We will go into more detail in lab, but let’s break this equation down a bit.</p>
 <p>The first part of this equation looks familiar, right?</p>
 <p><span class="math inline">\(\Delta N = r \cdot N_t\)</span></p>
 <p>What about the second part,</p>
@@ -556,8 +556,7 @@ legend(&quot;bottomleft&quot;,col=c(&quot;green&quot;,&quot;red&quot;),lty=c(1,1
 </ol>
 <p><strong>Q:</strong> What happens if population size starts out <em>at</em> carrying capacity? [tophat]<br />
 <strong>Q:</strong> What happens if population size starts out <em>above</em> carrying capacity? [tophat]<br />
-<strong>Q:</strong> Is this a stable equilibrium? [tophat]<br />
-<strong>Q:</strong> Can a wild population ever be at a non-stable equilibrium? What about a stable equilibrium? Why is it important to know about non-stable equilibria?</p>
+<strong>Q:</strong> Is this a stable equilibrium? [tophat]</p>
 <ol start="8" style="list-style-type: decimal">
 <li>Consider the basic logistic growth equation:</li>
 </ol>
@@ -568,7 +567,6 @@ legend(&quot;bottomleft&quot;,col=c(&quot;green&quot;,&quot;red&quot;),lty=c(1,1
 <p><strong>Q:</strong> What happens if <span class="math inline">\(r\)</span> is zero? What happens to carrying capacity?<br />
 <strong>Q:</strong> Which population is more likely to be found at or near K in nature? A population with very large <span class="math inline">\(r\)</span> or very small <span class="math inline">\(r\)</span>?<br />
 <strong>Q:</strong> How does this discussion relate to the concept of “r-selected” and “K-selected” species?</p>
-<p><strong>Q:</strong> Is a high value of <span class="math inline">\(r\)</span> good or bad for conservation?</p>
 <p><a href="LECTURE5.html">–go to next lecture–</a></p>
 </div>
 
